--- a/td3/index.html
+++ b/td3/index.html
@@ -23,6 +23,10 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -43,7 +47,7 @@
                 </div>
 
                 <!-- les icones -->
-                <div class="iconesHaut" align="right">
+                <div class="iconesHaut">
                     <!-- la grandeur des icones est h4 -->
 
                         <a href="#" style="color:black">
