--- a/td3/index.html
+++ b/td3/index.html
@@ -127,7 +127,7 @@
                         <!-- et est-ce que c'est correct comme ca ou "envoyer" n'est pas un button
                             et il faut faire 3 grides pour la derniere ligne?-->
                         <input id="ecrirmes" class="EcritureMessage" placeholder="Votre message ici!">
-                        <button class="envoyer" onclick="envoyer()">
+                        <button class="envoyer" onclick="envoyerMessage()">
                             Envoyer
                         </button>
                     </div>
