réussie d'envoyer un messagegit add .

--- a/td3/index.html
+++ b/td3/index.html
@@ -49,7 +49,7 @@
                         <a href="#" style="color:black">
                             <div class="utilisateur">
                                 <div class="far fa-user" onclick="connecter()"></div>
-                                <div id="nom" onclick="connecter()" class="nomUtilisateur"> Cliquez ici </div>
+                                <div id="nom" onclick="connecter()" class="nomUtilisateur"> TheMan </div>
                             </div>
                         </a>
 
@@ -126,7 +126,7 @@
 
                         <!-- et est-ce que c'est correct comme ca ou "envoyer" n'est pas un button
                             et il faut faire 3 grides pour la derniere ligne?-->
-                        <input id="ecrirmes" class="EcritureMessage" placeholder="Votre message ici!">
+                        <input id="dataMessage" class="EcritureMessage" placeholder="Votre message ici!">
                         <button class="envoyer" onclick="envoyerMessage()">
                             Envoyer
                         </button>
@@ -157,12 +157,12 @@
 </body>
 
 
-<script src="main.js"></script>
+
 <script src="connectionHandler.js"></script>
 <script src="message.js"></script>
 <script src="channel.js"></script>
 <script src="channelsObserver.js"></script>
 <script src="messagesObserver.js"></script>
-
+<script src="main.js"></script>
 
 </html>
