ajout fonctionnalité message, par contre overflow à droite incompréhensible

--- a/td3/index.html
+++ b/td3/index.html
@@ -103,7 +103,7 @@
 
                 <!-- place pour les messages -->
                 <div class="message">
-                    <div class="messageText">
+                    <div id="messageText">
                         <h1>Place pour les messages</h1>
                         <div id="testHello"> hello </div>
                         <!-- modal -->
@@ -120,7 +120,7 @@
                     </div>
                     <!-- la place pour l'ecriture -->
                     <div class="bar">
-                        <button class="like">
+                        <button class="like" onclick="displayMessage()">
                             <div class="far fa-thumbs-up"></div>
                         </button>
 
