fixed bug message

--- a/td3/index.html
+++ b/td3/index.html
@@ -46,7 +46,7 @@
                 <div class="iconesHaut">
                     <!-- la grandeur des icones est h4 -->
 
-                        <a href="#" style="color:black">
+                        <a href="#"  class="personne">
                             <div class="utilisateur">
                                 <div class="far fa-user" onclick="connecter()"></div>
                                 <div id="nom" onclick="connecter()" class="nomUtilisateur"> TheMan </div>
