ajout de beaucoup de choses!

--- a/td3/index.html
+++ b/td3/index.html
@@ -120,14 +120,14 @@
                     </div>
                     <!-- la place pour l'ecriture -->
                     <div class="bar">
-                        <button class="like" onclick="displayMessage()">
+                        <button class="like">
                             <div class="far fa-thumbs-up"></div>
                         </button>
 
                         <!-- et est-ce que c'est correct comme ca ou "envoyer" n'est pas un button
                             et il faut faire 3 grides pour la derniere ligne?-->
                         <input id="dataMessage" class="EcritureMessage" placeholder="Votre message ici!">
-                        <button class="envoyer" onclick="envoyerMessage()">
+                        <button id="envoyerEnter" class="envoyer" onclick="envoyerMessage()">
                             Envoyer
                         </button>
                     </div>
