ajout de autofocus

--- a/td3/index.html
+++ b/td3/index.html
@@ -126,7 +126,7 @@
 
                         <!-- et est-ce que c'est correct comme ca ou "envoyer" n'est pas un button
                             et il faut faire 3 grides pour la derniere ligne?-->
-                        <input id="dataMessage" class="EcritureMessage" placeholder="Votre message ici!">
+                        <input autofocus="autofocus" id="dataMessage" class="EcritureMessage" placeholder="Votre message ici!">
                         <button id="envoyerEnter" class="envoyer" onclick="envoyerMessage()">
                             Envoyer
                         </button>
