--- a/td3/index.html
+++ b/td3/index.html
@@ -49,7 +49,7 @@
                         <a href="#"  class="personne">
                             <div class="utilisateur">
                                 <div class="far fa-user" onclick="connecter()"></div>
-                                <div id="nom" onclick="connecter()" class="nomUtilisateur">TheMan </div>
+                                <div id="nom" onclick="connecter()" class="nomUtilisateur">User</div>
                             </div>
                         </a>
 
@@ -98,9 +98,9 @@
                     </div>
                 </div>
             </div>
-
+            <div id="sound"></div>
             <div class="container3">
-
+            
                 <!-- place pour les messages -->
                 <div class="message">
                     <div id="messageText">
@@ -121,7 +121,7 @@
                     <!-- la place pour l'ecriture -->
                     <div class="bar">
                         <button class="like">
-                            <div class="far fa-thumbs-up"></div>
+                            <div class="far fa-thumbs-up" onclick="envoyerMessagePouce()"></div>
                         </button>
 
                         <!-- et est-ce que c'est correct comme ca ou "envoyer" n'est pas un button
