modif sur le logo

--- a/td3/index.html
+++ b/td3/index.html
@@ -32,14 +32,22 @@
             <div class="container1">
                 <!-- polychat logo -->
                 <!-- pas avoir les syles et font dans html-->
-                <div>
+                <div id="logo">
                     <a href="index.html">
-                        <h1>
-                            <font color="#ff671B">Poly</font>
-                            <i style="color:black" class="fas fa-users"></i>
-                            <font color="0295D3"> Chat </font>
-                        </h1>
-                    </a>
+                        <div id="poly">
+                            Poly
+                        </div>
+                        </a>
+                        <div id="users">
+                            <a href="index.html">
+                                <i  class="fas fa-users"></i>
+                            </a>
+                        </div>
+                        <a href="index.html">
+                            <div id="chat">
+                                 Chat 
+                            </div>
+                        </a>
                 </div>
 
                 <!-- les icones -->
