ajout fin samedi

--- a/td3/test/index.html
+++ b/td3/test/index.html
@@ -76,11 +76,11 @@
                 </div>
             </div>
 
-            <div class="container2">
+            <div id="container2">
 
-                <div class="con22">
+                <div id="con22">
                     <div>Groupe actif:</div>
-                    <h4>Général</h4>
+                    
                 </div>
 
                 <!-- est-ce qu'il faut ajouter la ligne blanche entre les deux clonnes? -->
@@ -148,12 +148,12 @@
                         <div class="fas fa-star"> </div>  Général
                         <div class="defaut"> défaut </div>
                     </div>
-                    <div class="equipe1">
+                    <!--<div class="equipe1">
 
-                        <i id="eq" onclick="changePlusMinus(this)" class="fas fa-plus"></i>
+                        <i id="eq" onclick="changeStatus(this)" class="fas fa-plus"></i>
 
                         équipe 1
-                    </div>
+                    </div>-->
                     <!-- <div class="grGeneral">
 
         <i id="eq" onclick="changePlusMinus(this)" class="fas fa-plus" ></i>
