avant dernier ajout!

--- a/td3/index.html
+++ b/td3/index.html
@@ -62,7 +62,7 @@
                         </a>
 
                         <a href="#" style="color:black">
-                            <div class="far fa-bell"></div>
+                            <div class="far fa-bell" id="cloche"></div>
                         </a>
                         
                         <a href="#" style="color:black">
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div id="sound"></div>
-            <div class="container3">
+            <div class="container3" onclick="resetCompteur()">
             
                 <!-- place pour les messages -->
                 <div class="message">
